[project]
name = "emperor-reborn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zgx", email = "2529087850@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-ai>=1.106.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
emperor-reborn = "emperor_reborn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
